@@ -28,7 +28,8 @@ Items marked with [!] can't be found on the original levels.
 	Case 2 shows only those events that can be triggered from the reachable rooms.
 * Special events: (in yellow)
 	You can find more information about them here: https://www.popot.org/documentation.php?doc=PoP1SpecialEvents
-	Note: SDLPoP does not yet recognize if an event was placed elsewhere by a mod.
+	Note: Since (upcoming version), SDLPoP recognizes if certain events were placed elsewhere by a mod.
+		This works only with events whose place can be customized.
 	* level 0:
 		* "exit": Complete the level by entering this room.
 	* level 1:
